	  the way bitbake schedules tasks
	- Add BB_STAMP_POLICY variable/option ("perfile" or "full") controlling
	  how extensively stamps are looked at for validity
	- When handling build target failures make sure idepends are checked and
	  failed where needed. Fixes --continue mode crashes.
	- Fix problems with recrdeptask handling where some idepends weren't handled
	  correctly.

Changes in BitBake 1.8.10:
	- Psyco is available only for x86 - do not use it on other architectures.
	- Fix a bug in bb.decodeurl where http://some.where.com/somefile.tgz decoded to host="" (#1530)
	- Warn about malformed PREFERRED_PROVIDERS (#1072)
	- Add support for BB_NICE_LEVEL option (#1627)
	- Sort initial providers list by default preference (#1145, #2024)
	- Improve provider sorting so prefered versions have preference over latest versions (#768)
	- Detect builds of tasks with overlapping providers and warn (will become a fatal error) (#1359)
	- Add MULTI_PROVIDER_WHITELIST variable to allow known safe multiple providers to be listed
	- Handle paths in svn fetcher module parameter
	- Support the syntax "export VARIABLE"
	- Add bzr fetcher
	- Add support for cleaning directories before a task in the form:
	  do_taskname[cleandirs] = "dir"
	- bzr fetcher tweaks from Robert Schuster (#2913)
	- Add mercurial (hg) fetcher from Robert Schuster (#2913)
	- Fix bogus preferred_version return values
	- Fix 'depends' flag splitting
	- Fix unexport handling (#3135)
	- Add bb.copyfile function similar to bb.movefile (and improve movefile error reporting)
	- Allow multiple options for deptask flag
	- Use git-fetch instead of git-pull removing any need for merges when 
	  fetching (we don't care about the index). Fixes fetch errors.
	- Add BB_GENERATE_MIRROR_TARBALLS option, set to 0 to make git fetches 
	  faster at the expense of not creating mirror tarballs.
	- SRCREV handling updates, improvements and fixes from Poky
	- Add bb.utils.lockfile() and bb.utils.unlockfile() from Poky